syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.iotservice";
option java_outer_classname = "IoTServiceProto";
option objc_class_prefix = "TEMP";

package servico_tempo;

service ServicoTempo {
  
  // Create an employee record
  rpc CreateTempo (TempoData) returns (StatusReply) {}
  
  // Get an employeeÂ´s data
  rpc GetTempoDataFromID (TempoID) returns (TempoData) {}
  
}

message TempoData {
  uint32 id = 1;
  string data = 2;
  string localizacao = 3;
  string valorTemperatura = 4;
}

message StatusReply {
  string status = 1;
}

message TempoID {
  uint32 id = 1;
}

message EmptyMessage{}
